src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Converstion Process</fullName>
        <description>Used to manage picklist for status during the conversion process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open - Converted</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prospective Student</fullName>
        <description>Record type for documenting recruitment interaction</description>
        <isActive>true</isActive>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Bad_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use as filter to suppress direct mail from going to leads with known bad addresses.</description>
        <label>Bad Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>[import] - Examples include: Undergraduate, Graduate</description>
        <label>Career</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>College_Transfer_Hours__c</fullName>
        <description>[import] - Number of anticipated transfer hours for an undergraduate prospective student.</description>
        <label>College Transfer Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <description>[import] - Designates the primary contact method.</description>
        <inlineHelpText>Select the primary method the Lead would like to be contacted.</inlineHelpText>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convert_Contact_Account_ID__c</fullName>
        <description>[import] - The ID of the Account Associated with the Contact specified in the Convert To Contact Lookup field. This is a lazy hack to allow the trigger to work for the proof of concept.</description>
        <formula>Convert_Contact__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ID of the Account Associated with the Contact specified in the Convert To Contact Lookup field. This is a lazy hack to allow the trigger to work for the proof of concept.</inlineHelpText>
        <label>Convert: Contact Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[import] - If a Contact is connected here, the Lead will automatically convert to that Contact (without an Opportunity).</description>
        <inlineHelpText>If a Contact  is connected here, the Lead will automatically convert to that Contact (without an Opportunity).</inlineHelpText>
        <label>Convert: Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_Create_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - If checked, the Conversion process initiated by checking "Convert: Perform Conversion" will result in the creation of a new Opportunity.</description>
        <inlineHelpText>If checked, the Conversion process initiated by checking "Convert: Perform Conversion" will result in the creation of a new Opportunity.</inlineHelpText>
        <label>Convert: Create Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convert_Perform_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - If Checked, this Lead will be converted to a Contact record.</description>
        <inlineHelpText>If Checked, this Lead will be converted to a Contact record.</inlineHelpText>
        <label>Convert Lead: Perform Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[import] - Picklist with 241 countries listed</description>
        <label>Country of Citizenship</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Lead_Citizenship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Load__c</fullName>
        <description>[import] - Examples include Part-time, Full-Time, Undecided, No response</description>
        <label>Course Load</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part-time</fullName>
                </value>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>[import] - Birthday for the lead</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - Check for a deceased lead</description>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDU_Neighborhood__c</fullName>
        <description>[import] - Geodemographic Tag based socioeconomic data and educationally related information</description>
        <label>EDU Neighborhood</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>[import] - PeopleSoft unique ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Please enter the student's ID number.</inlineHelpText>
        <label>EMPLID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Eligible_Domestic__c</fullName>
        <formula>IF(
OR(
AND(ISBLANK( Email )),
HasOptedOutOfEmail = True,
International_Student__c = True),False,True)</formula>
        <label>Email Eligible Domestic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <description>[import] - Field to capture email status response from BriteVerify. Temp = temporary email address. Role = role-based email address.</description>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[import] - Look up to the term object</description>
        <label>Enrollment Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Lead_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>[import] - Examples include: Am. Indian Alaska Native, Asian, Black African-American, Hispanic, Pacific Islander, White</description>
        <label>Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Am. Indian Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black African-American</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - Indicates the prospective student is the first to attend college from his/her family.</description>
        <label>First Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>[import] - Examples include: Unknown, Female, Male</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geomarket_Code__c</fullName>
        <description>[import] - Geomarket code for the lead</description>
        <label>Geomarket Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grad_Academic_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grad Academic Interest</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Grad Academic Interest)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HS_Cluster__c</fullName>
        <description>[import] - CollegeBoard: Geodemographic Tag for student's high-school community</description>
        <label>HS Cluster</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HashLeadId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>HashLeadId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>High_School_Class_Percent__c</fullName>
        <description>[import] - Calculates HS Class Rank / HS Class Size through a workflow</description>
        <label>High School Class Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>High_School_Class_Rank__c</fullName>
        <description>[import] - Ranking based on class size</description>
        <label>High School Class Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_School_Class_Size__c</fullName>
        <description>[import] - Size of high school class</description>
        <label>High School Class Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution_ATP_Code__c</fullName>
        <formula>Last_Institution_Attended__r.ATP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution ATP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - Indicates the student meets certain criteria that labels he or she as an international student.</description>
        <label>International Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_at_Home__c</fullName>
        <inlineHelpText>Language identified from the TOEFL exam.</inlineHelpText>
        <label>Language Spoken at Home</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bambara</fullName>
                </value>
                <value>
                    <fullName>Bashkir</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bemba</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Berber</fullName>
                </value>
                <value>
                    <fullName>Bikol</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Cebuano</fullName>
                </value>
                <value>
                    <fullName>Chichewa</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chuvash</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Dyula</fullName>
                </value>
                <value>
                    <fullName>Efik</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Institution_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[import] - Last institution the Lead has attended. The institution can be a high school or a college.</description>
        <label>Last Institution Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Lead_Account_Institution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Institution_GPA_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[import] - GPA scale for the Last Institution GPA.</description>
        <label>Last Institution GPA Scale</label>
        <referenceTo>GPA_Scale__c</referenceTo>
        <relationshipLabel>Leads (Last Institution GPA Scale)</relationshipLabel>
        <relationshipName>Leads_GPAscale</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Institution_GPA__c</fullName>
        <description>[import] - GPA from last institution attended.</description>
        <label>Last Institution GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Number__c</fullName>
        <label>Lead Assignment Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Subtype__c</fullName>
        <description>[import] - Gives more specific source description.  Examples include: Coll Technology &amp; Innovation, College of Public Programs, Cronkite School-Journ/MassComm, Graduate Education, Health Solutions, Herberger Institute, Ira A Fulton Engineering, Liberal Arts &amp; Sciences, MaryLouFulton Teachers College, New Interdis Arts &amp; Sciences , Nursing &amp; Health Innovation, School of Letters &amp; Sciences, School of Sustainability, W.P. Carey School of Business, O'Connor College of Law, ASU Online, USA Today, Conference, EGSS Applying, EGSS Financing, EGSS GRE Prep, EGSS Personal Statement, Info Session – Campus, Info Session – Online, GRE, GRE Subject, TOEFL, NNE, CA Diversity, Idealist, NAU, Import, Degree Search</description>
        <label>Lead Source Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian Studies Program</fullName>
                </value>
                <value>
                    <fullName>ASU Online</fullName>
                </value>
                <value>
                    <fullName>CA Diversity</fullName>
                </value>
                <value>
                    <fullName>CLAS - Department of English</fullName>
                </value>
                <value>
                    <fullName>CLAS - Department of Physics</fullName>
                </value>
                <value>
                    <fullName>CLAS - Department of Psychology</fullName>
                </value>
                <value>
                    <fullName>College of Public Programs</fullName>
                </value>
                <value>
                    <fullName>Coll Technology &amp; Innovation</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Cronkite School-Journ/MassComm</fullName>
                </value>
                <value>
                    <fullName>Degree Search</fullName>
                </value>
                <value>
                    <fullName>EGSS Applying</fullName>
                </value>
                <value>
                    <fullName>EGSS Financing</fullName>
                </value>
                <value>
                    <fullName>EGSS GRE Prep</fullName>
                </value>
                <value>
                    <fullName>EGSS Personal Statement</fullName>
                </value>
                <value>
                    <fullName>ENGINE</fullName>
                </value>
                <value>
                    <fullName>Engineering - GOEE</fullName>
                </value>
                <value>
                    <fullName>GEM</fullName>
                </value>
                <value>
                    <fullName>Global Freshman Academy</fullName>
                </value>
                <value>
                    <fullName>Graduate College</fullName>
                </value>
                <value>
                    <fullName>Graduate Education</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>GRE Subject</fullName>
                </value>
                <value>
                    <fullName>Health Solutions</fullName>
                </value>
                <value>
                    <fullName>Herberger Institute</fullName>
                </value>
                <value>
                    <fullName>Historical, Philosophical &amp; Religious Studies, Sch</fullName>
                </value>
                <value>
                    <fullName>Hugh Downs School of Human Communication</fullName>
                </value>
                <value>
                    <fullName>Idealist</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Country_Code__c</fullName>
        <formula>TEXT( CountryCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Code__c</fullName>
        <formula>TEXT(StateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>[import] - Middle name of the lead</description>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRCCUA_Score__c</fullName>
        <description>NRCCUA modelling score on alumni data</description>
        <label>NRCCUA Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Hispanic_Honorable_Mention__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - National Hispanic (Honorable Mention) checkbox</description>
        <label>National Hispanic (Honorable Mention)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - Web form question: Check here if interested in earning your degree exclusively Online</description>
        <inlineHelpText>If checked, the student is interested in earning their degree online.</inlineHelpText>
        <label>Interested in Online Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Possible_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - Indicator for end users to mark a record as a possible duplicate within the system.</description>
        <inlineHelpText>Used to mark multiple Lead records (not Contact matching records).</inlineHelpText>
        <label>Possible Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_National_Scholar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - Potential National Scholar checkbox</description>
        <label>Potential National Scholar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_WUE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - Western Undergraduate Exchange - a prospective student who might be eligible for reduced tuition rate based on the students geographic location and other criteria.</description>
        <label>Potential WUE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set automatically by Apex. The most recently updated PeopleSoft Major Interest, or if a PSMajor Interest does not exist, the most recently updated Academic, College, or Degree Search Interest.</description>
        <inlineHelpText>The most recently updated PeopleSoft Major Interest, or if a PSMajor Interest does not exist, the most recently updated Academic, College, or Degree Search Interest.</inlineHelpText>
        <label>Primary Interest</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Primary Interest)</relationshipLabel>
        <relationshipName>Leads_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiting_Email_Change_Date__c</fullName>
        <description>[import] - Automatically set to the current date and time when the Email or Recruiting Email is changed on this Lead record. Mapped to the Contact record to determine if the Contact Email is to be replaced by the Recruiting Email.</description>
        <inlineHelpText>Automatically set to the current date and time when the Email or Recruiting Email is changed on this Lead record. Mapped to the Contact record to determine if the Contact Email is to be replaced by the Recruiting Email.</inlineHelpText>
        <label>Recruiting Email Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recruiting_Email__c</fullName>
        <description>[import] - Used to preserve Lead email address and to transfer to the Contact record</description>
        <label>Recruiting Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Religious_Preference__c</fullName>
        <description>[import] - Examples include: Assembly of God, Baha'I, Baptist, Buddhism, Catholic,Christian Reformed Church in America, Christian Science, Christian, Non-denominational, Christian-Disciples, Church of Christ, Church of God, Church of Jesus Christ of Latter-Day Saints, Church of the Nazarene, Eastern Orthodox churches, Episcopal, Evangelical Lutheran Church in America, Hinduism, I prefer not to answer, Islam/Muslim/Moslem, Judaism, Lutheran, Lutheran Church-Missouri Synod, Methodist, None, no preference or affiliation, Other, Pentecostal, Presbyterian, Presbyterian Church (USA), Reformed Church in America, Roman Catholic, Secular Free-Thought, Seventh-day Adventist, Southern Baptist Convention, Unitarian Universalist Association, United Methodist</description>
        <label>Religious Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly of God</fullName>
                </value>
                <value>
                    <fullName>Baha'I</fullName>
                </value>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Buddhism</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Christian, Non-denominational</fullName>
                </value>
                <value>
                    <fullName>Christian-Disciples</fullName>
                </value>
                <value>
                    <fullName>Christian Reformed Church in America</fullName>
                </value>
                <value>
                    <fullName>Christian Science</fullName>
                </value>
                <value>
                    <fullName>Church of Christ</fullName>
                </value>
                <value>
                    <fullName>Church of God</fullName>
                </value>
                <value>
                    <fullName>Church of Jesus Christ of Latter-Day Saints</fullName>
                </value>
                <value>
                    <fullName>Church of the Nazarene</fullName>
                </value>
                <value>
                    <fullName>Eastern Orthodox churches</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Evangelical Lutheran Church in America</fullName>
                </value>
                <value>
                    <fullName>Hinduism</fullName>
                </value>
                <value>
                    <fullName>I prefer not to answer</fullName>
                </value>
                <value>
                    <fullName>Islam/Muslim/Moslem</fullName>
                </value>
                <value>
                    <fullName>Judaism</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Lutheran Church-Missouri Synod</fullName>
                </value>
                <value>
                    <fullName>Methodist</fullName>
                </value>
                <value>
                    <fullName>None, no preference or affiliation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pentecostal</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
                <value>
                    <fullName>Presbyterian Church (USA)</fullName>
                </value>
                <value>
                    <fullName>Reformed Church in America</fullName>
                </value>
                <value>
                    <fullName>Roman Catholic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Experience__c</fullName>
        <description>[import] - Examples Include: Unknown, Yes, No</description>
        <inlineHelpText>Select if you know the prospective student has research experience</inlineHelpText>
        <label>Research Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAIS_Student_ID__c</fullName>
        <description>[import] - SAIS Student ID</description>
        <label>SAIS Student ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_ACCT_ID__c</fullName>
        <description>MDM Account ID</description>
        <label>MDM Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_Athletics_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MDM Athletics Flag</description>
        <label>MDM Athletics Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_Athletics_IDs__c</fullName>
        <description>MDM Athletics IDs</description>
        <label>MDM Athletics IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_CONTACT_ID__c</fullName>
        <description>MDM Contact ID</description>
        <label>MDM Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_DimCustIDs__c</fullName>
        <description>MDM Customer IDs</description>
        <label>MDM Customer IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_Foundation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MDM Foundation Flag</description>
        <label>MDM Foundation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_Foundation_IDs__c</fullName>
        <description>MDM Foundation IDs</description>
        <label>MDM Foundation IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_PeopleSoft_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MDM Peoplesoft Flag</description>
        <label>MDM Peoplesoft Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_PeopleSoft_IDs__c</fullName>
        <description>MDM Peoplesoft IDs</description>
        <label>MDM Peoplesoft IDs</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSB_CRMSYSTEM_SSID_Winner__c</fullName>
        <description>MDM SSID Winner</description>
        <label>MDM SSID Winner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>